--- a/Week_7_Assignment.ipynb
+++ b/Week_7_Assignment.ipynb
@@ -45,12 +45,12 @@
     "# Original data with None values\n",
     "data = {\n",
     "    'User': ['Sam and Bishop', 'Robert and Bob', 'Cody', 'Alphonso', 'Leonel'],\n",
-    "    'Dune: Part Two': [None, 2.0, None, 4.0, 3.0],\n",
-    "    'Nosferatu': [None, 3.0, 2.0, None, 3.0],\n",
+    "    'Dune: Part Two': [None, 3.0, None, 4.0, 3.0],\n",
+    "    'Nosferatu': [None, 3.0, 5.0, None, 3.0],\n",
     "    'The Beekeeper': [5.0, None, None, 3.0, 4.0],\n",
     "    'Inside Out 2': [None, None, 5.0, 4.0, 2.0],\n",
     "    'DeadPool and Wolverine': [5.0, 4.0, None, 2.0, None],\n",
-    "    'The Monkey': [None, 5.0, None, None, 4.0]\n",
+    "    'The Monkey': [None, None, None, None, 4.0]\n",
     "}\n",
     "\n",
     "df = pd.DataFrame(data)\n",
